# humanoid-simple-framework

./: CMakeLists.txt  LICENSE  README.md  filename.txt  package.xml
DynamixelSDK/c/example/protocol1.0/read_write/: read_write.c
DynamixelSDK/c/example/protocol1.0/read_write/linux64/: read_write
ROBOTIS/ROBOTIS-Framework/robotis_controller/src/robotis_controller/: robotis_controller.cpp
RSCUAD-Common/rscuad_description/: package.xml
RSCUAD-Common/rscuad_description/launch/: display.launch  gazebo.launch  rscuad.rviz
RSCUAD-Common/rscuad_description/meshes/: l_ank_roll.STL  l_hip_roll.STL  l_sho_pitch.STL  r_hip_pitch.STL  r_hip_yaw.STL  r_sho_roll.STL
RSCUAD-Common/rscuad_description/urdf/: gazebo_harness.xacro  rscuad.gazebo  rscuad.xacro  transmission.xacro
RSCUAD-Common/rscuad_gazebo/: CMakeLists.txt  package.xml
RSCUAD-Common/rscuad_gazebo/config/: joint_names_rscuad.yaml
RSCUAD-Common/rscuad_gazebo/launch/: camera.launch  rscuad_world.launch
RSCUAD-Common/rscuad_gazebo/src/: light_sensor_plugin.cpp  rscuad_gazebo_listener.cpp  rscuad_gazebo_talker.cpp
RSCUAD-Common/rscuad_gazebo/worlds/: rscuad.world
RSCUAD/robotis_op_simulation_walking/: CMakeLists.txt  package.xml
RSCUAD/robotis_op_simulation_walking/config/: robotis_op_walking.cfg
RSCUAD/robotis_op_simulation_walking/include/robotis_op_simulation_walking/: gazebo_walking.h  gazebo_walking_node.h
RSCUAD/robotis_op_simulation_walking/scripts/: joint.py
RSCUAD/robotis_op_simulation_walking/src/: gazebo_walking.cpp  gazebo_walking_node.cpp
RSCUAD/rscuad_demo/: CMakeLists.txt  package.xml
RSCUAD/rscuad_demo/launch/: demo.launch
RSCUAD/rscuad_manager/: CMakeLists.txt  package.xml
RSCUAD/rscuad_manager/include/rscuad_manager/: dxl_header.h  rscuad_manager.h
RSCUAD/rscuad_manager/src/: main.cpp  rscuad_manager.cpp
RSCUAD/rscuad_move_joint/: CMakeLists.txt  package.xml
RSCUAD/rscuad_move_joint/src/: rscuad_move_joint_node.cpp
RSCUAD/walking/: CMakeLists.txt  package.xml
RSCUAD/walking/config/: walk_tunner.cfg
RSCUAD/walking/include/walking/: walking.h  walking_node.h
RSCUAD/walking/src/: odom.py  walking.cpp  walking_node.cpp
RSCUAD/walking/src/math/: Matrix.cpp  Plane.cpp  Point.cpp  Vector.cpp
config/: joint_names_rscuad.yaml
launch/: display.launch  gazebo.launch
meshes/: head_pan.STL  head_tilt.STL  l_ank_pitch.STL  l_hip_pitch.STL  l_knee.STL  l_sho_roll.STL  r_ank_pitch.STL  r_ank_roll.STL  r_el.STL  r_knee.STL
robotis_op_simulation_walking/config/: robotis_op_walking.cfg
robotis_op_simulation_walking/include/robotis_op_simulation_walking/: gazebo_walking.h  gazebo_walking_node.h
robotis_op_simulation_walking/scripts/: walker.py  walker_demo.py
robotis_op_simulation_walking/src/: gazebo_walking.cpp  gazebo_walking_node.cpp
robotis_op_simulation_walking/src/robotis_op_simulation_walking/: darwin.py
rscuad_description/: CMakeLists.txt  package.xml
rscuad_description/launch/: display.launch  gazebo.launch
rscuad_description/meshes/: l_el.STL  l_hip_yaw.STL  r_hip_roll.STL  r_sho_pitch.STL
rscuad_description/urdf/: backup.xacro  rscuad.gazebo  rscuad.xacro  transmission.xacro
rscuad_description/world/: rscuad.world
rscuad_gazebo/: CMakeLists.txt  package.xml
rscuad_gazebo/config/: joint_names_rscuad.yaml
rscuad_gazebo/launch/: rscuad_world.launch
rscuad_gazebo/src/: rscuad_gazebo_listener.cpp  rscuad_gazebo_talker.cpp
rscuad_gazebo/worlds/: rscuad.world
rscuad_manager/: CMakeLists.txt  package.xml
rscuad_manager/include/rscuad_manager/: rscuad_manager.h
rscuad_manager/src/: main.cpp  rscuad_manager.cpp
urdf/: rscuad.csv  rscuad.gazebo  rscuad.xacro
