<package format="2">
  <name>rscuad_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for rscuad</p>
    <p>This package contains configuration data, 3D models and launch files for rscuad robot</p>
  </description>
  
  <license>BSD</license>
  <author email="danu1700022001@webmail.uad.ac.id">Danu andrean (RSCUAD)</author>
  <maintainer email="danu1700022001@webmail.uad.ac.id">Danu andrean (RSCUAD)</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  
  
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
